--- a/Quiz.Application/Quiz.Application.csproj
+++ b/Quiz.Application/Quiz.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Quiz.Domain\Quiz.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
