--- a/Quiz.Infrastructure/Quiz.Infrastructure.csproj
+++ b/Quiz.Infrastructure/Quiz.Infrastructure.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Quiz.Application\Quiz.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    </ItemGroup>
+
 </Project>
